@@ -196,7 +196,7 @@ public abstract class AbstractSepaSammelTransferBuchungImpl<T extends SepaSammel
    */
   public void setBetrag(double betrag) throws RemoteException
   {
-    setAttribute("betrag", new Double(betrag));
+    setAttribute("betrag", Double.valueOf(betrag));
   }
 
   /**
